# stl_operator

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
data/: .gitignore  test.mqo  test.stl  test_ascii.stl
lib/: CMakeLists.txt  stl_operator.f90
python/: csv2vtk.ipynb  get_center_coord.ipynb
src/: CMakeLists.txt  main.f90
